Fjernet exception throws og endret test mot statsborgerskap